# kai

./: .gitignore  LICENSE  README.md
documents/: Doxyfile
include/ozen/: ozen_algo_cx.h  ozen_u8_utils_cx.h
test/: CMakeLists.txt  README.md  u8ctype_cx_test.cpp  u8str_utils_cx_test.cpp
